# AminoExtract

./: .gitignore  CHANGELOG.md  LICENSE  README.md  env.yml  pyproject.toml  release-please-config.json  setup.py
.github/workflows/: publish.yaml  release.yml  sync.yml
AminoExtract/: __init__.py  __main__.py  args.py  enums.py  file_utils.py  filter.py  functions.py  gff_data.py  logging.py  reader.py  sequences.py  version.py  writer.py
tests/data/: test_sequences_module.gff
tests/data/e2e/: ESIB_EQA_2024_SARS1_01_consensus.gff  complex_input.fa  complex_input.gff  complex_output.fa  complex_output.faa  error2.fa  error2_input.gff  generate_random_sequence.py  issue3_output.fa  sars_wuhan_input.fa  sars_wuhan_output.fa  sars_wuhan_output.faa  simple_input.fa  simple_input.gff  swap_stop_codons.py  test_features3.gff  test_reference3.fa  viro_output.faa
tests/data/e2e/e2e_error_2/: error2.faa
tests/data/e2e/sars_wuhan_output/: sars_wuhan.faa
tests/data/e2e/simple_output/: simple_output.faa
tests/data/unit/: test_eqa_reader_exported.gff  test_reader.gff
tests/e2e/: test_e2e.py
tests/unit/: test_attribute_parser.py  test_feature_name_attr.py  test_get_feature_name_attribute.py  test_gff_dataframe.py  test_reader.py  test_sequences.py
